# shiny-gallery

./: .editorconfig  .gitignore  .python-version  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
shiny_gallery/: asgi.py  urls.py  wsgi.py
shiny_gallery/photos/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
shiny_gallery/photos/migrations/: 0001_initial.py  0002_initial.py
shiny_gallery/photos/templates/photos/: photo_detail.html  photo_form.html  photo_list.html  photo_pending_approval.html
shiny_gallery/photos/templates/photos/includes/: photo_detail_comment_form.html  photo_detail_comment_list.html  photo_detail_like_form.html  photo_detail_stats.html
shiny_gallery/settings/: base.py  production.py
shiny_gallery/static/shiny_gallery/css/: core.css
shiny_gallery/templates/shiny_gallery/: base.html
shiny_gallery/templates/shiny_gallery/includes/: base_footer.html  base_header.html
shiny_gallery/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
shiny_gallery/users/migrations/: 0001_initial.py
shiny_gallery/users/templates/users/: user_form.html  user_login.html  user_logout.html
