[tool.poetry]
name = "shiny-gallery"
version = "0.1.0"
description = ""
authors = ["Marciel Sousa"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.18.25"
dj-database-url = "0.5.0"
django-storages = "1.11.1"
Django = "3.2.6"
easy-thumbnails = "2.7.1"
gunicorn = "20.1.0"
Pillow = "8.3.1"
psycopg2 = "2.9.1"

[tool.poetry.dev-dependencies]
black = "21.7b0"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
